# SymBioCortex

./: LICENSE  README.md  Wissenschaftliche Dokumentation.md  pyproject.toml
apps/: cli.py  streamlit_app.py
datasets/: sample_corpus.txt
runs/: demo.json  streamlit_last.json
runs/model/: graph.json  language_model.kn.json  tokenizer.json
src/symbio/: __init__.py  agent.py  autopoiesis.py  biocortex.py  bridge.py  config.py  events.py  feedback.py  field.py  hpio.py  lm_kn.py  logging_setup.py  mycelium.py  neuromod.py  orchestrator.py  replay.py  swarm.py  tokenization.py  types.py  utils.py
src/symbio/apps/: __init__.py  cli.py
src/symbio/coach/: __init__.py  levenshtein.py  rerank.py  tuner.py
src/symbio/core/: __init__.py  ngram_kn.py  tokenize.py
src/symbio/generate/: __init__.py  mix_sampler.py
src/symbio/metrics/: __init__.py  neology.py
src/symbio/morph/: __init__.py  guardrails.py
src/symbiocortex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_field_and_swarm.py  test_lm_kn.py  test_mycelium.py  test_neology.py  test_rerank.py  test_symbiosis_loop.py  test_tokenization.py
